--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
         ]
     },
     "devDependencies": {
-        "nodemon": "^2.0.19"
+        "autoprefixer": "^10.4.8",
+        "nodemon": "^2.0.19",
+        "postcss": "^8.4.16",
+        "tailwindcss": "^3.1.8"
     }
 }
