--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@testing-library/user-event": "^13.5.0",
         "axios": "^0.27.2",
         "cors": "^2.8.5",
+        "dotenv": "^16.0.1",
         "express": "^4.18.1",
         "mongoose": "^6.5.2",
         "react": "^18.2.0",
