--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "server": "nodemon src/server/index.js",
+        "start": "react-app-rewired start",
+        "server": "nodemon server/index.js",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
@@ -47,6 +47,7 @@
         "autoprefixer": "^10.4.8",
         "nodemon": "^2.0.19",
         "postcss": "^8.4.16",
+        "react-app-rewired": "^2.2.1",
         "tailwindcss": "^3.1.8"
     }
 }
